@@ -556,9 +556,12 @@
                     weapon_ele1, weapon_ele2, shield_ele1, shield_ele2
                 });
 
-                // Use Optimizer.optimize_kontors()
-                const optimizer = new Optimizer(player, mob, list_modifiers);
-                const result = optimizer.optimize_kontors();
+                const optimizerFightsInput = document.getElementById('optimizer_n_fights');
+                const n_fights = parseInt(optimizerFightsInput.value);
+                const optimizer = new Optimizer(player, mob, list_modifiers, n_fights);
+                let result;
+                result = optimizer.optimize();
+                
                 if (result && result.bestStats && result.winChance !== undefined) {
                     const [power, precision, evasion, hull] = result.bestStats;
                     const tmp_player = new Player({
@@ -580,34 +583,30 @@
                     const creditsPerDay = battle.get_revenue('daily', result.winChance);
                     const expPerHour = battle.get_experience('hourly', result.winChance);
                     const expPerDay = battle.get_experience('daily', result.winChance);
-                    optimizerResultDiv.innerHTML = `
-                        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 0.2em 1.2em; width: 140px; margin-bottom: 1em; font-size: 1em; margin-left: 20px;">
-                            <div><b>Power</b><br>${power}</div>
-                            <div><b>Precision</b><br>${precision}</div>
-                            <div><b>Evasion</b><br>${evasion}</div>
-                            <div><b>Hull</b><br>${hull}</div>
-                        </div>
-                        <div style="font-size: 0.98em; margin-top: 0.2em;">
-                            <div><b>Win chance:</b> ${(result.winChance * 100).toFixed(2)}%</div>
-                            <div><b>Credits per hour:</b> ${millify(creditsPerHour)}/h</div>
-                            <div><b>Credits per day:</b> ${millify(creditsPerDay)}/day</div>
-                            <div><b>Experience per hour:</b> ${millify(expPerHour)}/h</div>
-                            <div><b>Experience per day:</b> ${millify(expPerDay)}/day</div>
-                        </div>
-                    `;
-                    // Add Import button below Optimize, centered
-                    let optimizerBlock = optimizerBtn.closest('.optimizer-block');
+                    
+                    // Update the stats
+                    document.getElementById('opt_power').textContent = power;
+                    document.getElementById('opt_precision').textContent = precision;
+                    document.getElementById('opt_evasion').textContent = evasion;
+                    document.getElementById('opt_hull').textContent = hull;
+                    
+                    // Update the results
+                    document.getElementById('opt_win_chance').textContent = `${(result.winChance * 100).toFixed(2)}%`;
+                    document.getElementById('opt_credits_hour').textContent = `${millify(creditsPerHour)}/h`;
+                    document.getElementById('opt_credits_day').textContent = `${millify(creditsPerDay)}/day`;
+                    document.getElementById('opt_exp_hour').textContent = `${millify(expPerHour)}/h`;
+                    document.getElementById('opt_exp_day').textContent = `${millify(expPerDay)}/day`;
+
+                    // Add Import button next to Optimize
                     let importBtn = document.getElementById('importOptimizedBtn');
                     if (!importBtn) {
                         importBtn = document.createElement('button');
                         importBtn.id = 'importOptimizedBtn';
                         importBtn.type = 'button';
                         importBtn.textContent = 'Import';
-                        importBtn.style.margin = '18px 6px 0 0';
-                        importBtn.style.alignSelf = 'center';
-                        importBtn.style.fontSize = '0.9m';
                         optimizerBtn.parentNode.insertBefore(importBtn, optimizerBtn.nextSibling);
                     }
+                    importBtn.style.display = 'inline-block';
                     importBtn.onclick = () => {
                         form.power.value = power;
                         form.precision.value = precision;
@@ -615,9 +614,19 @@
                         form.hull.value = hull;
                     };
                 } else {
-                    optimizerResultDiv.innerHTML = '<span style="color: #a00">No result</span>';
+                    // Reset all values to "-"
+                    document.getElementById('opt_power').textContent = '-';
+                    document.getElementById('opt_precision').textContent = '-';
+                    document.getElementById('opt_evasion').textContent = '-';
+                    document.getElementById('opt_hull').textContent = '-';
+                    document.getElementById('opt_win_chance').textContent = '-';
+                    document.getElementById('opt_credits_hour').textContent = '-';
+                    document.getElementById('opt_credits_day').textContent = '-';
+                    document.getElementById('opt_exp_hour').textContent = '-';
+                    document.getElementById('opt_exp_day').textContent = '-';
+                    
                     let importBtn = document.getElementById('importOptimizedBtn');
-                    if (importBtn) importBtn.remove();
+                    if (importBtn) importBtn.style.display = 'none';
                 }
             });
 
@@ -816,25 +825,48 @@
                 <div id="cloneModifiersSection" class="clone-modifiers-section"></div>
             </div>
             <div style="display: flex; flex-direction: column; align-items: flex-start; margin-left: 7.5em;">
-                <div class="battle-block" style="margin-top: 0; margin-left: 5px; min-height: 210px; max-height: 210px;">
-                    <div class="block-label">Battle Simulation</div>
+                <div class="battle-block" style="margin-top: 0; margin-left: 5px; min-height: 210px; max-height: 210px;width: 350px; min-width: 350px; max-width: 350px">
+                    <div class="block-label">Battle Simulation
+                        <span style="color: #4fa3ff; margin-left: 5px; cursor: help;" title="Run a battle simulation with the current configuration. The simulation will execute the specified number of battles (up to 1,000,000) to calculate win probability and resource gains.">ⓘ</span>
+                    </div>
                     <div class="form-row">
                         <div class="form-group">
                             <label for="n_fights">Number of fights:</label>
-                            <input type="number" id="n_fights" name="n_fights" value="10000" min="1" max="1000000">
+                            <input type="number" id="n_fights" name="n_fights" value="10000" min="1" max="1000000" style="width: 5.5em; background: #36405a; color: #e6eaf3; border: 1px solid #2c3242;">
                         </div>
-                        <div class="form-group" style="align-items: flex-start; justify-content: flex-start;">
+                        <div class="form-group" style="align-items: flex-start; justify-content: flex-start; margin-left: -30px;">
                             <button id="simulateBtn" type="button">Simulate</button>
                         </div>
                     </div>
                 </div>
-                <div class="optimizer-block" style="margin-top: 1.5em; background: #f8f8f8; margin-left: 5px; border-radius: 6px; border: 1px solid #e0e0e0; padding: 0.7em 1.2em 0.5em 1.2em; box-sizing: border-box; width: 370px; min-width: 370px; max-width: 370px; min-height: 210px;">
-                    <div style="display: flex; flex-direction: row; align-items: flex-start; gap: 1.1em;">
-                        <div style="display: flex; flex-direction: column; align-items: flex-start; gap: 0.3em; min-width: 90px;">
-                            <div class="block-label" style="margin-bottom: 0.2em;">Optimizer</div>
-                            <button id="optimizerBtn" type="button" style="margin-bottom: 0.1em;">Optimize</button>
+                <div class="optimizer-block" style="margin-top: 1.5em; margin-left: 5px; width: 500px; min-width: 500px; max-width: 500px; min-height: 210px;">
+                    <div class="block-label">Optimizer
+                        <span style="color: #4fa3ff; margin-left: 5px; cursor: help;" title="Find the optimal stat distribution for your current configuration. The optimizer will test various stat combinations using the specified number of simulations (up to 1,000,000). Higher values provide more accurate results but significantly increase computation time and may temporarily freeze the interface. Consider starting with a lower number and increasing it if needed.">ⓘ</span>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="optimizer_n_fights">Number of fights:</label>
+                            <input type="number" id="optimizer_n_fights" name="optimizer_n_fights" value="5000" min="1" max="1000000" style="width: 5.5em; background: #36405a; color: #e6eaf3; border: 1px solid #2c3242;">
                         </div>
-                        <div id="optimizerResult"></div>
+                        <div class="form-group" style="align-items: flex-start; justify-content: flex-start; margin-left: -100px; display: flex; flex-direction: row; align-items: center;">
+                            <button id="optimizerBtn" type="button">Optimize</button>
+                            <button id="importOptimizedBtn" type="button" style="display: none; margin-left: 20px;">Import</button>
+                        </div>
+                    </div>
+                    <div id="optimizerResult" style="display: flex; flex-direction: row; gap: 2em; margin-top: 1em;">
+                        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 0.2em 1.2em; width: 140px; font-size: 1em;">
+                            <div><b>Power</b><br><span id="opt_power">-</span></div>
+                            <div><b>Precision</b><br><span id="opt_precision">-</span></div>
+                            <div><b>Evasion</b><br><span id="opt_evasion">-</span></div>
+                            <div><b>Hull</b><br><span id="opt_hull">-</span></div>
+                        </div>
+                        <div style="font-size: 0.98em;">
+                            <div><b>Win chance:</b> <span id="opt_win_chance">-</span></div>
+                            <div><b>Credits per hour:</b> <span id="opt_credits_hour">-</span></div>
+                            <div><b>Credits per day:</b> <span id="opt_credits_day">-</span></div>
+                            <div><b>Experience per hour:</b> <span id="opt_exp_hour">-</span></div>
+                            <div><b>Experience per day:</b> <span id="opt_exp_day">-</span></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -853,8 +885,8 @@
         if (lastUpdated) {
             const now = new Date();
             const pad = n => n.toString().padStart(2, '0');
-            const dateStr = "2025-05-08";
-            const timeStr = "19:32";
+            const dateStr = "2025-05-09";
+            const timeStr = "16:32";
             lastUpdated.textContent = `Last updated: ${dateStr} ${timeStr}`;
         }
     </script>
