@@ -1,4 +1,7 @@
 
+2025-05-09 16:32
+- It is now possible to select the number of fights for each stat combination being tested in the optimization 
+
 2025-05-08 19:32
 - Added local memory for last settings used. Settings should be kept in memory after refreshing
 
